# nice-web

./: API.md  Cargo.toml  README.md  run.bat  run.sh
migrations/2023-08-29-135202_setup_user/: up.sql
migrations/2023-08-29-135224_setup_post/: up.sql
nice-web/: Cargo.toml
nice-web-backend/: Cargo.toml
nice-web-backend/migrations/2023-08-29-135202_setup_user/: up.sql
nice-web-backend/migrations/2023-08-29-135224_setup_post/: up.sql
nice-web-backend/src/: main.rs  schema.rs
nice-web-backend/src/controller/: mod.rs
nice-web-backend/src/controller/routes/: mod.rs  signin.rs  signout.rs  signup.rs
nice-web-backend/src/controller/routes/posts/: bookmarkpost.rs  createpost.rs  mod.rs  removepost.rs  showusers.rs
nice-web-backend/src/model/db/: mod.rs
nice-web-backend/src/model/session/: mod.rs  user.rs
nice-web/src/: main.rs  schema.rs
nice-web/src/controller/: mod.rs
nice-web/src/controller/routes/: mod.rs  signin.rs  signup.rs
nice-web/src/model/: mod.rs
nice-web/src/model/db/: mod.rs
nice-web/src/model/session/: mod.rs
src/: main.rs  schema.rs
src/controller/: mod.rs
src/controller/routes/: signin.rs
src/model/db/: mod.rs
web-client/: Cargo.toml  index.html  style.scss
web-client/src/: main.rs
web-client/src/api/: mod.rs  types.rs
web-client/src/components/: mod.rs  nav.rs  posts.rs  signin.rs  signup.rs
