[package]
name = "nice-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"
diesel = { version = "2.1.1", features = ["postgres", "r2d2"] }
rocket = { version = "=0.5.0-rc.3", features = ["secrets"] }
dotenvy = "0.15"
bcrypt = "0.15"
dotenv = "0.15.0"
