[package]
name = "web-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.10.0"
js-sys = "0.3.64"
yew-router = "0.17"
yew-hooks = "0.2.0"
yewdux = "0.9.3"
serde = { version = "1.0.188", features = ["derive"] }
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"